--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body {
 .font-primary {
   color: #00abae;
 }
+.navbar-brand:hover {
+  background-color: lightgray;
+}
+
+.navbar-toggler:hover {
+  background-color: lightgray;
+}
 
 .title-icon {
   font-size: 20px;
@@ -58,7 +65,7 @@ a.font-black {
 
 #about .email {
   margin-top: 40x;
-  font-size: 30px;
+  font-size: 15px;
 }
 
 #about .icons {
@@ -84,8 +91,14 @@ PROJECT
 #project .card-title {
   font-weight: bold;
 }
-#project .card img{
-  width :100%
+#project .card img {
+  width: 100%;
 }
-#project .card-titled{font-weigth: bold
+#project .card-titled {
+  font-weight: bold;
+}
+video.project-video {
+  width: 100%;
+  height: 270px;
+  background-color: #000;
 }
